--- a/reference.bib
+++ b/reference.bib
@@ -21,9 +21,9 @@
 @String { PG       = {Comput. Graph. Forum (PG)} }
 @String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
 @String { SGP      = {Comput. Graph. Forum (SGP)} }
-@String { SMI      = {Shape Mod. Int. Conf.} }
 @String { SGPOLD   = {Symp. Geom. Proc.} }
 @String { SIG      = {ACM Trans. Graph. (SIGGRAPH)} }
+@String { SMI      = {Shape Mod. Int. Conf.} }
 @String { threeDV  = {3DV} }
 @String { TOG      = {ACM Trans. Graph.} }
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
@@ -36,7 +36,6 @@
   booktitle = ICML,
   year      = {2018}
 }
-
 
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
@@ -230,7 +229,6 @@
   journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
-
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -1044,6 +1042,15 @@
 }
 
 
+@article{De2020,
+  title   = {Discrete differential operators on polygonal meshes},
+  author  = {De Goes, Fernando and Butts, Andrew and Desbrun, Mathieu},
+  journal = SIG,
+  volume  = {39},
+  number  = {4},
+  year    = {2020}
+}
+
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
   title   = {Exoskeleton: Curve network abstraction for {3D} shapes},
@@ -1052,6 +1059,7 @@
   volume  = {35},
   number  = {1}
 }
+
 
 @inproceedings{Deitke2023,
   title     = {Objaverse: A universe of annotated {3D} objects},
@@ -1076,13 +1084,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Deng2021,
   title     = {Vector neurons: A general framework for {SO(3)}-equivariant networks},
   author    = {Deng, Congyue and Litany, Or and Duan, Yueqi and Poulenard, Adrien and Tagliasacchi, Andrea and Guibas, Leonidas J.},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Deng2023,
   title     = {Nerdi: Single-view nerf synthesis with language-guided diffusion as general image priors},
@@ -1141,7 +1149,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
   title     = {Cascaded pose regression},
@@ -1149,6 +1156,7 @@
   year      = {2010},
   publiser  = {IEEE}
 }
+
 
 @inproceedings{Dong2022,
   title     = {{CSWin Transformer}: A general vision transformer backbone with cross-shaped windows},
@@ -1174,14 +1182,13 @@
 }
 
 
+
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
   journal = SA,
   year    = {2018}
 }
-
-
 
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
@@ -1192,6 +1199,7 @@
   number  = {6}
 }
 
+
 @article{Ebke2014,
   author  = {Ebke, Hans-Christian and Campen, Marcel and Bommes, David and Kobbelt, Leif},
   title   = {Level-of-detail quad meshing},
@@ -1200,7 +1208,6 @@
   volume  = {33},
   number  = {6}
 }
-
 
 @article{Edelsbrunner1994,
   title   = {Three-dimensional alpha shapes},
@@ -1211,6 +1218,7 @@
   year    = {1994}
 }
 
+
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -1220,13 +1228,13 @@
   number  = {5}
 }
 
-
 @inproceedings{Emiel2023,
   author    = {Hoogeboom, Emiel and Heek, Jonathan and Salimans, Tim},
   title     = {Simple Diffusion: End-to-End Diffusion for High Resolution Images},
   year      = {2023},
   booktitle = ICML
 }
+
 
 @article{Engel2021,
   title   = {Point transformer},
@@ -2591,8 +2599,8 @@
 }
 
 @misc{Libigl2018,
-  title  = {{libigl}: A simple {C++} geometry processing library},
   author = {Alec Jacobson and Daniele Panozzo and others},
+  title  = {{libigl}: A simple {C++} geometry processing library},
   note   = {https://libigl.github.io/},
   year   = {2018}
 }
@@ -2741,12 +2749,14 @@
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
 
+
 @inproceedings{Liu2021a,
   title     = {Swin transformer: Hierarchical vision transformer using shifted windows},
   author    = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @inproceedings{Liu2021b,
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
@@ -2755,14 +2765,12 @@
   year      = {2021}
 }
 
-
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
   author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2813,12 +2821,14 @@
   year      = {2015}
 }
 
+
 @book{Logan2017,
   title     = {A first course in the finite element method},
   author    = {Logan, Daryl L},
   year      = {2017},
   publisher = {Nelson Education}
 }
+
 
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
@@ -2827,14 +2837,12 @@
   year      = {2015}
 }
 
-
 @article{Loop1987,
   title   = {Smooth subdivision surfaces based on triangles},
   author  = {Loop, Charles},
   journal = {Thesis, University of Utah},
   year    = {1987}
 }
-
 
 @inproceedings{Lorensen1987,
   author    = {Lorensen, William E. and Cline, Harvey E.},
@@ -2843,12 +2851,14 @@
   year      = {1987}
 }
 
+
 @inproceedings{Loshchilov2017,
   title     = {Decoupled weight decay regularization},
   author    = {Loshchilov, Ilya and Hutter, Frank},
   booktitle = ICLR,
   year      = {2019}
 }
+
 
 @inproceedings{Lou2021,
   author    = {Luo, Shitong and Hu, Wei},
@@ -2857,14 +2867,12 @@
   year      = {2021}
 }
 
-
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
   title     = {Adaptive radial basis function nonlinearities, and the problem of generalisation},
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
-
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2874,6 +2882,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @article{Lu2022,
   title   = {{DPM-Solver}: A Fast {ODE} Solver for Diffusion Probabilistic Model Sampling in Around 10 Steps},
@@ -2897,13 +2906,13 @@
   year    = {2017}
 }
 
+
 @article{Luo2009,
   title   = {Approximating gradients for meshes and point clouds via diffusion metric},
   author  = {Luo, Chuanjiang and Safa, Issam and Wang, Yusu},
   journal = SGP,
   year    = {2009}
 }
-
 
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
@@ -2920,13 +2929,13 @@
   year      = {2022}
 }
 
+
 @article{Maaten2008,
   author  = {Maaten, Laurens van der and Hinton, Geoffrey},
   title   = {Visualizing data using {t-SNE}},
   journal = {Journal of machine learning research},
   year    = {2008}
 }
-
 
 @article{Maehara2013,
   title   = {Euclidean embeddings of finite metric spaces},
@@ -2936,7 +2945,6 @@
   number  = {23},
   year    = {2013}
 }
-
 
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
@@ -2967,6 +2975,14 @@
   author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
   booktitle = ICCV,
   year      = {2021}
+}
+
+@article{Marin2021,
+  title   = {Spectral shape recovery and analysis via data-driven connections},
+  author  = {Marin, Riccardo and Rampini, Arianna and Castellani, Umberto and Rodol{\`a}, Emanuele and Ovsjanikov, Maks and Melzi, Simone},
+  journal = {International journal of computer vision},
+  volume  = {129},
+  year    = {2021}
 }
 
 @article{Martel2021,
@@ -3062,6 +3078,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Misra2021,
   title     = {An End-to-End Transformer Model for {3D} Object Detection},
   author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
@@ -3149,6 +3166,14 @@
   year      = {2019}
 }
 
+@inproceedings{Nasikun2018,
+  title     = {Fast Approximation of Laplace-Beltrami Eigenproblems},
+  author    = {Nasikun, Ahmad and Brandt, Christopher and Hildebrandt, Klaus},
+  booktitle = {Computer Graphics Forum},
+  volume    = {37},
+  year      = {2018}
+}
+
 @inproceedings{Nekrasov2021,
   title     = {{Mix3D}: Out-of-Context Data Augmentation for 3D Scenes},
   author    = {Nekrasov, Alexey and Schult, Jonas and Litany, Or and Leibe, Bastian and Engelmann, Francis},
@@ -3230,6 +3255,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Oechsle2019,
   title     = {Texture fields: Learning texture representations in function space},
   author    = {Oechsle, Michael and Mescheder, Lars and Niemeyer, Michael and Strauss, Thilo and Geiger, Andreas},
@@ -3310,12 +3336,14 @@
   year      = {2019}
 }
 
+
 @inproceedings{Park2022,
   title     = {Fast Point Transformer},
   author    = {Chunghyun Park and Yoonwoo Jeong and Minsu Cho and Jaesik Park},
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Paszke2019,
   author    = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
@@ -3324,7 +3352,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Pathak2017,
   author    = {Pathak, Deepak and Girshick, Ross and Doll{\'a}r, Piotr and Darrell, Trevor and Hariharan, Bharath},
   booktitle = CVPR,
@@ -3332,13 +3359,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Pauly2001,
   title     = {Spectral processing of point-sampled geometry},
   author    = {Pauly, Mark and Gross, Markus},
   booktitle = {Computer graphics and interactive techniques},
   year      = {2001}
 }
+
 
 @article{Pauly2006,
   author  = {Pauly, Mark and Kobbelt, Leif and Gross, Markus},
@@ -3349,6 +3376,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Peng2020,
   title     = {Convolutional occupancy networks},
   author    = {Peng, Songyou and Niemeyer, Michael and Mescheder, Lars and Pollefeys, Marc and Geiger, Andreas},
@@ -3356,14 +3384,12 @@
   year      = {2020}
 }
 
-
 @article{Perez2003,
   author  = {P{\'e}rez, Patrick and Gangnet, Michel and Blake, Andrew},
   title   = {Poisson image editing},
   journal = SIG,
   year    = {2003}
 }
-
 
 @inproceedings{Petronetto2013,
   title     = {Mesh-Free Discrete Laplace--Beltrami Operator},
@@ -3500,6 +3526,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
   author    = {Rahaman, Nasim and Baratin, Aristide and Arpit, Devansh and Draxler, Felix and Lin, Min and Hamprecht, Fred and Bengio, Yoshua and Courville, Aaron},
@@ -3507,13 +3534,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
   author    = {Rahimi, Ali and Recht, Benjamin},
   booktitle = NeurIPS,
   year      = {2008}
 }
-
 
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
@@ -3534,6 +3561,7 @@
   year    = 2020
 }
 
+
 @inproceedings{Rakotosaona2021,
   title     = {Learning delaunay surface elements for mesh reconstruction},
   author    = {Rakotosaona, Marie-Julie and Guerrero, Paul and Aigerman, Noam and Mitra, Niloy J. and Ovsjanikov, Maks},
@@ -3541,14 +3569,12 @@
   year      = {2021}
 }
 
-
 @article{Ramesh2022,
   title   = {Hierarchical text-conditional image generation with {CLIP} latents},
   author  = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
   journal = {arXiv preprint arXiv:2204.06125},
   year    = {2022}
 }
-
 
 @article{Raviv2010,
   title   = {Full and partial symmetries of non-rigid shapes},
@@ -3589,6 +3615,7 @@
   year    = {2017}
 }
 
+
 @article{Ren2023,
   title   = {XCube ($X^3$): Large-Scale 3D Generative Modeling using Sparse Voxel Hierarchies},
   author  = {Ren, Xuanchi and Huang, Jiahui and Zeng, Xiaohui and Museth, Ken and Fidler, Sanja and Williams, Francis},
@@ -3596,13 +3623,13 @@
   year    = {2023}
 }
 
+
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
   title     = {Fully-Convolutional Point Networks for Large-Scale Point Clouds},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @article{Reuter2010,
   author  = {Reuter, Martin},
@@ -3621,6 +3648,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Riegler2017,
   author    = {Gernot Riegler and Ali Osman Ulusoy and Andreas Geiger},
   title     = {{OctNet}: Learning deep {3D} representations at high resolutions},
@@ -3628,14 +3656,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Riegler2017a,
   author    = {Riegler, Gernot and Ulusoy, Ali Osman and Bischof, Horst and Geiger, Andreas},
   title     = {{OctNetFusion}: Learning depth fusion from data},
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Rombach2022,
   title     = {High-resolution image synthesis with latent diffusion models},
@@ -3689,12 +3715,21 @@
   year    = {2021}
 }
 
+
 @inproceedings{Rukhovich2022,
   title     = {{FCAF3D}: fully convolutional anchor-free {3D} object detection},
   author    = {Rukhovich, Danila and Vorontsova, Anna and Konushin, Anton},
   booktitle = ECCV,
   year      = {2022}
 }
+
+@article{Rusch2023,
+  title   = {A survey on oversmoothing in graph neural networks},
+  author  = {Rusch, T Konstantin and Bronstein, Michael M and Mishra, Siddhartha},
+  journal = {arXiv preprint arXiv:2303.10993},
+  year    = {2023}
+}
+
 
 @article{Rustamov2009,
   title   = {Interior distance using barycentric coordinates},
@@ -3720,14 +3755,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Saharia2022,
   title     = {Photorealistic text-to-image diffusion models with deep language understanding},
   author    = {Saharia, Chitwan and Chan, William and Saxena, Saurabh and Li, Lala and Whang, Jay and Denton, Emily L and Ghasemipour, Kamyar and Gontijo Lopes, Raphael and Karagol Ayan, Burcu and Salimans, Tim and others},
   booktitle = NeurIPS,
   year      = {2022}
 }
-
 
 @article{Saharia2022a,
   title   = {Image super-resolution via iterative refinement},
@@ -3738,12 +3771,14 @@
   year    = {2022}
 }
 
+
 @inproceedings{Sanchez2020,
   title     = {Learning to simulate complex physics with graph networks},
   author    = {Sanchez-Gonzalez, Alvaro and Godwin, Jonathan and Pfaff, Tobias and Ying, Rex and Leskovec, Jure and Battaglia, Peter},
   booktitle = ICML,
   year      = {2020}
 }
+
 
 @article{Sarbolandi2015,
   author  = {H. Sarbolandi and D. Lefloch and A. Kolb},
@@ -3767,6 +3802,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Schaefer2004,
   title     = {Dual marching cubes: Primal contouring of dual grids},
   author    = {Schaefer, Scott and Warren, Joe},
@@ -3789,6 +3825,7 @@
   booktitle = {SIGGRAPH}
 }
 
+
 @article{Schmidt2016,
   author  = {Schmidt, U. and Jancsary, J. and Nowozin, S. and Roth, S. and Rother, C.},
   title   = {Cascades of regression tree fields for image restoration},
@@ -3805,7 +3842,6 @@
   booktitle = NeurIPS,
   year      = {2022}
 }
-
 
 @inproceedings{Sedaghat2016,
   author    = {Nima Sedaghat and Mohammadreza Zolfaghari and Thomas Brox},
@@ -3865,6 +3901,7 @@
   year    = {2010}
 }
 
+
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -3883,7 +3920,6 @@
   number  = {3},
   year    = {2007}
 }
-
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -3951,6 +3987,7 @@
   number  = {3}
 }
 
+
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -3967,7 +4004,6 @@
   year      = {2021},
   booktitle = NeurIPS
 }
-
 
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
@@ -4013,6 +4049,7 @@
   year    = {2019}
 }
 
+
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shi-Qing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
@@ -4020,7 +4057,6 @@
   year    = {2016},
   volume  = {43}
 }
-
 
 @inproceedings{Shue2023,
   title     = {{3D} Neural Field Generation using Triplane Diffusion},
@@ -4038,6 +4074,7 @@
   number  = {6}
 }
 
+
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
@@ -4053,7 +4090,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
   title     = {Deep learning {3D} shape surfaces using geometry images},
@@ -4067,6 +4103,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Sinha2021,
   title     = {D2C: Diffusion-Denoising Models for Few-shot Conditional Generation},
@@ -4082,7 +4119,6 @@
   journal = {Journal of computational physics},
   year    = {2018}
 }
-
 
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
@@ -4105,6 +4141,7 @@
   year         = {2017}
 }
 
+
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
@@ -4121,7 +4158,6 @@
   number  = {4},
   year    = {2014}
 }
-
 
 @inproceedings{Song2015,
   title     = {{SUN RGB-D}: A {RGB-D} scene understanding benchmark suite},
@@ -4311,6 +4347,7 @@
   year    = {2019}
 }
 
+
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
   author    = {Matthew Tancik and Pratul P. Srinivasan and Ben Mildenhall and Sara Fridovich-Keil and Nithin Raghavan and Utkarsh Singhal and Ravi Ramamoorthi and Jonathan T. Barron and Ren Ng},
@@ -4327,7 +4364,6 @@
   number  = {6},
   year    = {2018}
 }
-
 
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
@@ -4366,6 +4402,7 @@
   year    = {2019}
 }
 
+
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -4382,7 +4419,6 @@
   booktitle = {Proc. of the conference on Visualization},
   year      = {2002}
 }
-
 
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -4442,13 +4478,13 @@
   year    = {1995}
 }
 
+
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
   title     = {Multi-view supervision for single-view reconstruction via differentiable ray consistency},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -4487,6 +4523,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Van2016,
   title     = {Conditional Image Generation with {PixelCNN} Decoders},
   author    = {Van den Oord, Aaron and Kalchbrenner, Nal and Espeholt, Lasse and Vinyals, Oriol and Graves, Alex and others},
@@ -4501,7 +4538,6 @@
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @article{Velickovic2017,
   title   = {Graph attention networks},
@@ -4586,6 +4622,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Wang2017a,
   author    = {Wang, Fei and Jiang, Mengqing and Qian, Chen and Yang, Shuo and Li, Cheng and Zhang, Honggang and Wang, Xiaogang and Tang, Xiaoou},
   title     = {Residual attention network for image classification},
@@ -4600,7 +4637,6 @@
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @article{Wang2018a,
   author  = {Peng-Shuai Wang and Chun-Yu Sun and Yang Liu and Xin Tong},
@@ -4619,6 +4655,7 @@
   volume  = {37},
   number  = {6}
 }
+
 
 @inproceedings{Wang2018c,
   title     = {Cosface: Large margin cosine loss for deep face recognition},
@@ -4644,7 +4681,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Wang2019a,
   author    = {Wang, Yue and Solomon, Justin M.},
   title     = {Deep Closest Point: Learning Representations for Point Cloud Registration},
@@ -4659,6 +4695,7 @@
   year         = {2019}
 }
 
+
 @article{Wang2019c,
   author  = {Wang, Yue and Sun, Yongbin and Liu, Ziwei and Sarma, Sanjay E and Bronstein, Michael M and Solomon, Justin M},
   title   = {Dynamic graph {CNN} for learning on point clouds},
@@ -4667,7 +4704,6 @@
   volume  = {38},
   number  = {5}
 }
-
 
 @inproceedings{Wang2020,
   author    = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
@@ -4711,6 +4747,7 @@
   year      = {2021}
 }
 
+
 @inproceedings{Wang2021c,
   title     = {Pyramid vision transformer: A versatile backbone for dense prediction without convolutions},
   author    = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
@@ -4738,7 +4775,6 @@
   year    = {2022}
 }
 
-
 @inproceedings{Wang2022b,
   title     = {{CAGroup3D}: Class-aware grouping for {3D} object detection on point clouds},
   author    = {Haiyang Wang and Lihe Ding and Shaocong Dong and Shaoshuai Shi and Aoxue Li and Jianan Li and Zhenguo Li and Liwei Wang},
@@ -4755,6 +4791,7 @@
   year    = {2023}
 }
 
+
 @article{Wang2023a,
   title   = {{ProlificDreamer}: High-Fidelity and Diverse Text-to-{3D} Generation with Variational Score Distillation},
   author  = {Zhengyi Wang and Cheng Lu and Yikai Wang and Fan Bao and Chongxuan Li and Hang Su and Jun Zhu},
@@ -4769,7 +4806,6 @@
   booktitle = SGPOLD,
   year      = {2007}
 }
-
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -4801,6 +4837,7 @@
   year      = {2016}
 }
 
+
 @misc{Wightman2019,
   author       = {Ross Wightman},
   title        = {PyTorch Image Models},
@@ -4808,7 +4845,6 @@
   journal      = {GitHub repository},
   howpublished = {\url{https://github.com/rwightman/pytorch-image-models}}
 }
-
 
 @article{Wilhelms1992,
   author  = {Wilhelms, Jane and Van Gelder, Allen},
@@ -4819,13 +4855,13 @@
   number  = {3}
 }
 
+
 @article{Williams2018,
   title   = {Practical shape analysis and segmentation methods for point cloud models},
   author  = {Williams, Reed M. and Ilie{\c{s}}, Horea T.},
   journal = CAGD,
   year    = {2018}
 }
-
 
 @inproceedings{Williams2021,
   title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
@@ -4840,6 +4876,7 @@
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
@@ -4858,7 +4895,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
   title     = {Learning a probabilistic latent space of object shapes via {3D} generative-adversarial modeling},
@@ -4866,13 +4902,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Wu2017,
   author    = {Wu, Jiajun and Wang, Yifan and Xue, Tianfan and Sun, Xingyuan and Freeman, Bill and Tenenbaum, Josh},
   title     = {Marrnet: {3D} shape reconstruction via {2.5D} sketches},
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
@@ -4994,6 +5030,7 @@
   year      = {2021}
 }
 
+
 @article{Xin2009,
   title   = {Improving {Chen and Han}'s algorithm on the discrete geodesic problem},
   author  = {Xin, Shi-Qing and Wang, Guo-Jin},
@@ -5002,7 +5039,6 @@
   number  = {4},
   year    = {2009}
 }
-
 
 @inproceedings{Xin2012,
   title     = {Constant-time all-pairs geodesic distance query on triangle meshes},
@@ -5049,6 +5085,7 @@
   year      = {2015}
 }
 
+
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -5057,7 +5094,6 @@
   volume  = {36},
   number  = {1}
 }
-
 
 @article{Xu2015b,
   title   = {Fast wavefront propagation {(FWP)} for computing exact geodesic distances on meshes},
@@ -5155,6 +5191,7 @@
   year      = {2017}
 }
 
+
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
@@ -5171,6 +5208,8 @@
 }
 
 
+
+
 @inproceedings{Yang2019,
   title     = {Pointflow: {3D} point cloud generation with continuous normalizing flows},
   author    = {Yang, Guandao and Huang, Xun and Hao, Zekun and Liu, Ming-Yu and Belongie, Serge and Hariharan, Bharath},
@@ -5180,15 +5219,12 @@
 
 
 
-
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
-
-
 
 @inproceedings{Yang2021,
   title     = {Focal Self-attention for Local-Global Interactions in Vision Transformers},
@@ -5236,6 +5272,8 @@
   year      = {2017}
 }
 
+
+
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -5244,8 +5282,6 @@
   volume  = {37},
   number  = {4}
 }
-
-
 
 @article{Ying2013,
   title   = {Saddle vertex graph ({SVG}) a novel solution to the discrete geodesic problem},
@@ -5256,6 +5292,8 @@
   year    = {2013}
 }
 
+
+
 @article{Ying2014,
   title   = {{Parallel Chen-Han (PCH)} algorithm for discrete geodesics},
   author  = {Ying, Xiang and Xin, Shi-Qing and He, Ying},
@@ -5264,8 +5302,6 @@
   number  = {1},
   year    = {2014}
 }
-
-
 
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
@@ -5283,15 +5319,15 @@
   number  = {3}
 }
 
+
+
+
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
   booktitle = CVPR,
   year      = {2018}
 }
-
-
-
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -5328,14 +5364,14 @@
   year      = {2019}
 }
 
+
+
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
   title     = {Surface feature detection and description with applications to mesh matching},
   booktitle = CVPR,
   year      = {2009}
 }
-
-
 
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
@@ -5351,14 +5387,14 @@
   year      = {2017}
 }
 
+
+
 @inproceedings{Zeng2022,
   title     = {{LION}: Latent Point Diffusion Models for {3D} Shape Generation},
   author    = {Xiaohui Zeng and Arash Vahdat and Francis Williams and Zan Gojcic and Or Litany and Sanja Fidler and Karsten Kreis},
   booktitle = NeurIPS,
   year      = {2022}
 }
-
-
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -5403,13 +5439,13 @@
   issue   = {7}
 }
 
+
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
   title     = {Colorful image colorization},
   year      = {2016}
 }
-
 
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
@@ -5424,6 +5460,8 @@
   booktitle = ICLR,
   year      = {2018}
 }
+
+
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -5440,8 +5478,6 @@
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
-
-
 
 @inproceedings{Zhang2020,
   title     = {Deep {FusionNet} for point cloud semantic segmentation},
@@ -5485,13 +5521,13 @@
   year      = {2022}
 }
 
+
 @inproceedings{Zhang2022a,
   title     = {{3DILG}: Irregular latent grids for {3D} generative modeling},
   author    = {Zhang, Biao and Nie{\ss}ner, Matthias and Wonka, Peter},
   booktitle = NeurIPS,
   year      = {2022}
 }
-
 
 @article{Zhang2023,
   title   = {{NeuroGF}: A Neural Representation for Fast Geodesic Distance and Path Queries},
@@ -5500,13 +5536,13 @@
   year    = {2023}
 }
 
+
 @article{Zhang2023a,
   title   = {{3DShape2VecSet}: A {3D} shape representation for neural fields and generative diffusion models},
   author  = {Zhang, Biao and Tang, Jiapeng and Niessner, Matthias and Wonka, Peter},
   journal = SIG,
   year    = {2023}
 }
-
 
 @inproceedings{Zhao2019,
   author    = {Zhao, Yongheng and Birdal, Tolga and Deng, Haowen and Tombari, Federico},
@@ -5515,6 +5551,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhao2020,
   author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
   booktitle = ECCV,
@@ -5522,13 +5559,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Zhao2021,
   title     = {Point transformer},
   author    = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Zheng2011,
   author  = {Zheng, Youyi and Fu, Hongbo and Au, Oscar Kin-Chung and Tai, Chiew-Lan},
@@ -5540,14 +5577,13 @@
 }
 
 
+
 @inproceedings{Zheng2013,
   author    = {Zheng, Bo and Zhao, Yibiao and Yu, Joey C. and Ikeuchi, Katsushi and Zhu, Song-Chun},
   title     = {Beyond point clouds: Scene understanding by reasoning geometry and physics},
   booktitle = CVPR,
   year      = {2013}
 }
-
-
 
 @article{Zheng2022,
   title   = {{SDF-StyleGAN}: Implicit {SDF}-Based StyleGAN for {3D} Shape Generation},
@@ -5572,6 +5608,7 @@
   year      = {2020}
 }
 
+
 @article{Zhou2006,
   author  = {Zhou, Kun and Huang, Xin and Wang, Xi and Tong, Yiying and Desbrun, Mathieu and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh quilting for geometric texture synthesis},
@@ -5580,6 +5617,7 @@
   volume  = {25},
   number  = {3}
 }
+
 
 
 @article{Zhou2011,
@@ -5591,8 +5629,6 @@
   number  = {5}
 }
 
-
-
 @inproceedings{Zhou2016,
   title     = {Fast global registration},
   author    = {Zhou, Qian-Yi and Park, Jaesik and Koltun, Vladlen},
@@ -5600,13 +5636,13 @@
   year      = {2016}
 }
 
+
 @article{Zhou2018,
   title   = {{Open3D}: A modern library for {3D} data processing},
   author  = {Zhou, Qian-Yi and Park, Jaesik and Koltun, Vladlen},
   journal = {arXiv preprint arXiv:1801.09847},
   year    = {2018}
 }
-
 
 @article{Zhou2021,
   title   = {Simple multi-dataset detection},
@@ -5622,14 +5658,14 @@
   year      = {2021}
 }
 
+
+
 @inproceedings{Zhu2017,
   author    = {Zhu, Rui and Galoogahi, Hamed Kiani and Wang, Chaoyang and Lucey, Simon},
   title     = {Rethinking reprojection: Closing the loop for pose-aware shape reconstruction from a single image},
   booktitle = ICCV,
   year      = {2017}
 }
-
-
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
@@ -5644,6 +5680,7 @@
   journal = {arXiv preprint arXiv:2305.18766},
   year    = {2023}
 }
+
 
 @article{Zigelman2002,
   title   = {Texture mapping using surface flattening via multidimensional scaling},
@@ -5661,7 +5698,6 @@
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Zwicker2001,
   title     = {Surface splatting},
